global: add styles for tooltips

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -149,6 +149,13 @@
             circle { stroke: fg }
         }
 
+        // App -> Tooltips.
+        ._3pkG4 {
+            c: fg 0 hl;
+            box-shadow: inner, bsh;
+            button { c: ac }
+        }
+
         /// App -> Intro.
         .iFKgT {
             c: 0 bd bg;
