--- a/wa.user.styl
+++ b/wa.user.styl
@@ -337,15 +337,30 @@
         }
         /// Alerts.
         > header + span[class] {
-            ._1puWZ, ._2xikZ {
+            ._1puWZ, ._2xikZ, ._1sFYw, ._2t3oV {
                 border-bottom: 1px solid bd;
                 c: 0 0 hl;
-                ._3K1Z_ * { c: yellow }
-                [data-icon ^= 'chevron-'] path { v: yellow }
+            }
+            /// Disconnected/connecting.
+            ._1puWZ, ._2xikZ {
+                * { c: yellow }
+                [data-icon ^= 'chevron-'] path { fill: yellow }
                 [data-icon ^= 'alert-'] path {
-                    &[fill ^= '#FFF'] { fill: bd }
-                    &[fill ^= '#FFB'] { fill: yellow }
+                    &[fill ^= '#FFF'] { fill: yellow }
+                    &[fill ^= '#FFB'] { fill: hl }
                 }
+            }
+            /// Enable notifications.
+            ._1sFYw {
+                * { c: blue }
+                [data-icon ^= 'chevron-'] path { v: blue }
+                [data-icon ^= 'alert-'] path[fill ^= '#FFF'] { fill: blue }
+            }
+            /// Phone battery low.
+            ._2t3oV {
+                * { c: red }
+                [data-icon ^= 'chevron-'] path { v: red }
+                [data-icon ^= 'alert-'] path[fill ^= '#FFF'] { fill: red }
             }
         }
         /// Search.
