--- a/wa.user.styl
+++ b/wa.user.styl
@@ -383,11 +383,13 @@
             c: 0 0 t;
             /// Items.
             [style *= 'z-index'] > div > div[class] {
-                border-top: 1px solid bd;
                 c: 0 0 t;
+                box-shadow: 0 1px bd;
                 /// Active.
-                &:hover, &._3mMX1 { c: 0 0 hl }
-                &._3mMX1 { border-bottom: 1px solid bd }
+                &:hover, &._3mMX1 {
+                    c: 0 0 hl;
+                    box-shadow: inset 0 1px bd, 0 1px bd;
+                }
                 /// Remove borders.
                 &::after, > div:last-child { border: none }
                 /// Avatar background.
@@ -402,6 +404,8 @@
                     /// Body.
                     > div:last-child { c: cm }
                 }
+                /// Unread indicators.
+                .P6z4j { c: white 0 ac }
             }
         }
     }
