left: adjust heights for pane header

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -415,6 +415,7 @@
         > div[class], > span > div[class], > div > div[class] {
             c: 0 0 bg;
             > header {
+                min-height: unset !important;
                 // &, > div { height: unset }
                 border-bottom: 1px solid bd;
                 height: unset;
@@ -422,7 +423,11 @@
                 /// NOTE: Reset text position.
                 ._1pYs5 {
                     margin: 0;
-                    padding-top: 6px;
+                    padding-top: 4px;
+                }
+                .kyJvR {
+                    height: 58px;
+                    c: fg;
                 }
             }
             /// Highlighted sections.
