--- a/wa.user.styl
+++ b/wa.user.styl
@@ -318,6 +318,21 @@
         }
     }
 
+    // Global -> Icons.
+    span[class] {
+        &[data-icon] {
+            path {
+                fill: fg;
+                transition: 0.15s ease;
+            }
+            /// Animate-ish.
+            &:hover path {
+                opacity: 1;
+                fill-opacity: 0.9 !important;
+            }
+        }
+    }
+
     // Global -> Context menu.
     div:not(#z) {
         &[style ^= 'transform-origin:'] {
