--- a/wa.user.styl
+++ b/wa.user.styl
@@ -498,6 +498,27 @@
             [style *= 'height: 40px'] { c: 0 0 t }
             [title] { c: fg }
         }
+        /// Chat -> Loader.
+        [title *= 'loading'] {
+            c: 0 0 hl;
+            box-shadow: inner, bsh;
+            svg circle { stroke: green }
+        }
+        /// Chat -> System notes.
+        .a7otO {
+            opacity: 0.95;
+            letter-spacing: 0;
+            text-shadow: none;
+            c: white 0 ac;
+            box-shadow: inset 0 -3px sh;
+        }
+        /// Chat -> Jump to new messages.
+        ._3KRbU {
+            c: 0 0 hl;
+            box-shadow: inner;
+            // &:hover { c: 0 0 bd }
+            .P6z4j { c: white 0 ac }
+        }
         /// Messages area.
         .copyable-area > div[tabindex] {
             c: 0 bd;
