chat: add styles for emoji popout

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -549,6 +549,17 @@
     // Main -> Chat input.
     #main > footer {
         c: 0 0 t;
+        /// Active emojis.
+        .-XQxp._1oNFt path {
+            fill-opacity: 1;
+            fill: ac;
+        }
+        /// Emoji picker.
+        ._2mlOb {
+            c: 0 bd hl;
+            box-shadow: inset 0 1px bd;
+            &::before { content: none }
+        }
         /// Input area.
         > div:first-child {
             border-top: 1px solid bd;
