--- a/wa.user.styl
+++ b/wa.user.styl
@@ -575,6 +575,37 @@
                 }
             }
         }
+        /// Emoji/gif/sticker menu.
+        ._30sf0 {
+            c: 0 bd;
+            /// Header.
+            ._2avTY {
+                c: 0 0 hl;
+                box-shadow: inset 0 1px bd, inset 0 -1px bd;
+                div[style *= 'background'] { c: 0 0 ac }
+                > :not(._2wn58) { c: cm }
+                ._2wn58 { c: fg }
+                /// Stickers -> Active nav.
+                .Orl3a { c: 0 0 ac }
+            }
+            /// Body.
+            .QChXd, ._20KNO, .RxbUw {
+                c: 0 0 bg;
+                /// Search.
+                [data-tab] {
+                    c: 0 bd bg;
+                    label {
+                        c: fg bd hl;
+                        box-shadow: inner;
+                        input { c: fg }
+                    }
+                }
+                /// Gif -> Preloader.
+                ._2x9yi { c: 0 0 hl }
+                /// Stickers -> Retry button.
+                [data-id = 'retry'] { c: ac }
+            }
+        }
         /// Chat -> Select messages.
         + span:not([class]) > div {
             border-left: 1px solid bd;
