--- a/wa.user.styl
+++ b/wa.user.styl
@@ -331,6 +331,34 @@
                 fill-opacity: 0.9 !important;
             }
         }
+        /// Left -> Status icon.
+        &[data-icon ^= 'status-v3'] path {
+            &:first-child {
+                fill: fg;
+                fill-opacity: 0.55;
+            }
+        }
+        &[data-icon = 'status-v3-unread'] path {
+            &:last-child { fill: ac }
+        }
+        /// Search -> Back button.
+        &[data-icon = 'back-blue'] path { fill: blue }
+        /// Default user/group/broadcasts icons.
+        &[data-icon ^= 'default-'] path {
+            &:first-child { fill: bd }
+            &:last-child { fill: cm }
+        }
+        /// Seen message.
+        &[data-icon $= '-dblcheck-ack'] path { fill: blue }
+        /// Report contact.
+        &[data-icon = 'thumbs-down'] {
+            path { fill: orange }
+        }
+        /// Delete chat/missed call.
+        &[data-icon = 'delete-danger'],
+        &[data-icon = 'miss'] {
+            path { fill: red }
+        }
     }
 
     // Global -> Context menu.
