--- a/wa.user.styl
+++ b/wa.user.styl
@@ -11,6 +11,11 @@
 
 @var text     ui_font    "Custom UI font        " 'font_name'
 @var checkbox fullscreen "Enable fullscreen mode" 0
+@var select   app_image  'Custom app background ' {
+    'Custom  *': 'custom  ',
+    'Default  ': 'default ',
+    'None     ': 'none    ',
+}
 
 @var color dark    "Color: Primary bg   " #272c35
 @var color darken  "Color: Highlight bg " #222730
@@ -54,6 +59,7 @@
         --bshadow   : 0 2px 4px var(--shadow);
 
         --userstyle: 'Dark-WhatsApp [Alpha]';
+        --background: url('https://images.unsplash.com/photo-1434569117012-ce134ee1a088?fit=crop&w=1280&h=720&q=80');
     }
 
     // * Use stylus-lang variables with CSS variables.
@@ -181,7 +187,20 @@
 
     #app > div {
         &::after {
-            c: 0 0 hl;
+            /// TODO: Implement URL/opacity/filter options.
+            if ( app_image == custom ) {
+                s = -4px;
+                opacity: 0.50;
+                top: s; right: s; bottom: s; left: s;
+                height: unset; width: unset;
+                filter: blur((-1 * s)) invert(0);
+                background-image: var(--background);
+                c: 0 0 hl;
+            } else if ( app_image == default ) {
+                c: 0 0 hl;
+            } else {
+                display: none;
+            }
             /// Remove image in fullscreen mode.
             if ( fullscreen == 1 ) { content: none }
         }
