--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1,10 +1,10 @@
 /* ==UserStyle==
-@name         WhatsApp by Mew [Alpha]
+@name         Dark-WhatsApp
 @description  Dark and light, very customizable theme for WhatsApp.
 @namespace    github.com/vednoc/onyx
 @homepageURL  https://github.com/vednoc/onyx
 @supportURL   https://github.com/vednoc/onyx/issues
-@version      1.5.0
+@version      1.9.9
 @author       vednoc <vednoc@pm.me> (https://gitlab.com/vednoc)
 @license      MIT
 @preprocessor stylus
