--- a/wa.user.styl
+++ b/wa.user.styl
@@ -9,30 +9,30 @@
 @license      MIT
 @preprocessor stylus
 
-@var text     ui_font    "Custom UI font        " 'font_name'
-@var checkbox fullscreen "Enable fullscreen mode" 0
+@var text     ui_font    'Custom UI font        ' ''font_name''
+@var checkbox fullscreen 'Enable fullscreen mode' 0
 @var select   app_image  'Custom app background ' {
     'Custom  *': 'custom  ',
     'Default  ': 'default ',
     'None     ': 'none    ',
 }
 
-@var color dark    "Color: Primary bg   " #272c35
-@var color darken  "Color: Highlight bg " #222730
-@var color darker  "Color: Secondary bg " #1f232a
-@var color light   "Color: Primary fg   " #d1d1d1
-@var color lighter "Color: Secondary fg " #e9e9e9
-@var color accent  "Color: Accent       " #7289da
-@var color yellow  "Color: Yellow       " #f0c674
-@var color orange  "Color: Orange       " #d98245
-@var color red     "Color: Red          " #a54242
-@var color magenta "Color: Magenta      " #b294bb
-@var color violet  "Color: Violet       " #85678f
-@var color blue    "Color: Blue         " #54738c
-@var color cyan    "Color: Cyan         " #5e8d87
-@var color green   "Color: Green        " #7b823a
-@var color white   "Color: White        " #ffffff
-@var color shadow  "Color: Shadow       " #00000010
+@var color dark    'Color: Primary bg   ' #272c35
+@var color darken  'Color: Highlight bg ' #222730
+@var color darker  'Color: Secondary bg ' #1f232a
+@var color light   'Color: Primary fg   ' #d1d1d1
+@var color lighter 'Color: Secondary fg ' #e9e9e9
+@var color accent  'Color: Accent       ' #7289da
+@var color yellow  'Color: Yellow       ' #f0c674
+@var color orange  'Color: Orange       ' #d98245
+@var color red     'Color: Red          ' #a54242
+@var color magenta 'Color: Magenta      ' #b294bb
+@var color violet  'Color: Violet       ' #85678f
+@var color blue    'Color: Blue         ' #54738c
+@var color cyan    'Color: Cyan         ' #5e8d87
+@var color green   'Color: Green        ' #7b823a
+@var color white   'Color: White        ' #ffffff
+@var color shadow  'Color: Shadow       ' #00000010
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
