chat: add styles for attach dropdown

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -394,6 +394,12 @@
                 c: cm;
                 &:hover { c: fg 0 hl }
             }
+            /// Chat -> Attach dropdown.
+            &._1fRWV {
+                top: -10px;
+                padding: 10px;
+                .Ijb1Q::after { box-shadow: 0 4px 8px sh }
+            }
         }
     }
 
