--- a/wa.user.styl
+++ b/wa.user.styl
@@ -602,6 +602,47 @@
         }
     }
 
+    // Main -> Chat message bubbles.
+    .message {
+        left = bd;
+        right = hl;
+        &-in, &-out {
+            /// Tails.
+            &.tail > .tail-container {
+                width: unset;
+                height: unset;
+                border: 6px solid t;
+                background: none !important;
+            }
+            /// Date.
+            [data-pre-plain-text] + div * { c: cm }
+        }
+        /// Left.
+        &-in {
+            &:not(.a81-s) {
+                c: fg 0 left;
+                box-shadow: 0 1px sh !important;
+            }
+            &.tail > .tail-container {
+                rad: 4px 0 0 0;
+                border-top-color: left;
+                border-right-color: left;
+            }
+        }
+        /// Right.
+        &-out {
+            &:not(.a81-s) {
+                c: fg 0 right;
+                box-shadow: 0 1px sh !important;
+            }
+            &.tail > .tail-container {
+                rad: 0 4px 0 0;
+                border-top-color: right;
+                border-left-color: right;
+            }
+        }
+    }
+
     // Main -> Chat input.
     #main > footer {
         c: 0 0 t;
