chat: add styles for stickers

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -616,6 +616,17 @@
             }
             /// Date.
             [data-pre-plain-text] + div * { c: cm }
+            /// Stickers.
+            &.a81-s {
+                /// Header.
+                ._3Mf7Z { c: 0 0 bg }
+                /// Date.
+                ._3qAvH {
+                    c: cm 0 hl;
+                    // box-shadow: inner !important;
+                    div { color: inherit }
+                }
+            }
         }
         /// Left.
         &-in {
