--- a/wa.user.styl
+++ b/wa.user.styl
@@ -174,6 +174,7 @@
         /// App -> Intro.
         .iFKgT {
             c: 0 bd bg;
+            &::after { c: 0 ac }
             [style] {
                 h1 { c: fg }
                 div { c: cm }
@@ -187,6 +188,12 @@
                 transition: opacity 0.6s ease;
             }
         }
+
+        /// Global -> Typing alert.
+        span[title *= 'typing']:not(#z) { c: ac }
+
+        /// Contacts -> Loader.
+        svg[width = '18'][height = '18'] circle { stroke: green }
     }
 
     #app > div {
@@ -298,7 +305,7 @@
             c: 0 0 bg;
             @media (min-width: 1441px) {
                 rad: r;
-                box-shadow: outer;
+                border: 1px solid bd;
             }
             /// Contacts.
             > div[class]:nth-child(1) {
@@ -314,7 +321,7 @@
                 /// Reset the circle icon.
                 svg[width][height] path {
                     fill: none;
-                    stroke: fg
+                    stroke: fg;
                 }
             }
             /// Feat -> Fullscreen mode.
@@ -441,7 +448,7 @@
             }
         }
         /// Search.
-        ._2HS9r {
+        > div[tabindex = '-1'] {
             border-bottom: 1px solid bd;
             c: 0 0 t;
             /// Active.
@@ -556,7 +563,7 @@
             [title] { c: fg }
         }
         /// Chat -> Loader.
-        [title *= 'loading'] {
+        [title *= 'load'] {
             c: 0 0 hl;
             box-shadow: inner, bsh;
             svg circle { stroke: green }
