global: add styles for emoji picker popout

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -242,6 +242,36 @@
         &:not(:hover):not(:focus):not(.selected) { filter: opacity(0.6) }
     }
 
+    /// Global -> Emoji picker popout.
+    ._342qq {
+        rad: r !important;
+        box-shadow: bsh;
+        /// Header.
+        ._2avTY {
+            c: 0 0 hl;
+            box-shadow: inset 0 -1px bd;
+            [style] { c: 0 0 ac }
+        }
+        /// Content.
+        .QChXd {
+            c: 0 0 bg;
+            [data-tab] {
+                c: 0 0 bg;
+                /// Input.
+                label {
+                    c: fg 0 hl;
+                    box-shadow: inner;
+                }
+            }
+            /// Sections.
+            ._2lKjK { c: cm }
+        }
+        + [data-animate-dropdown-nib] {
+            c: 0 0 bd;
+            box-shadow: none;
+        }
+    }
+
     /// Global -> Modals.
     .overlay {
         c: 0 0 t;
