left: add styles for starred/archived/new group

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -572,6 +572,32 @@
                 ._6xQdq { c: fg }
             }
             ._1qWhd { c: cm }
+            /// New group.
+            ._1w-mX {
+                c: 0 0 t;
+                input { c: fg }
+                ._39cGk { c: 0 bd }
+                /// Resets for contacts.
+                + ._1c8mz {
+                    c: 0 0 t;
+                    .r7sRK { c: ac 0 hl }
+                    ._8-yzK { c: 0 0 t }
+                    ._2DxRd, ._2WP9Q { c: 0 t }
+                    [style *= 'height: 49px'] { c: 0 0 bd }
+                }
+            }
+            /// Starred/Archived.
+            ._1WMT2 {
+                &::before {
+                    margin-top: -1px;
+                    left: 0;
+                    c: 0 0 bd;
+                }
+                &::after { content: none }
+                &._1lakC, &._2nA3s { c: 0 0 hl }
+                ._2V2qB, .jLybP::before { c: cm }
+            }
+        }
         }
     }
 
