--- a/wa.user.styl
+++ b/wa.user.styl
@@ -63,6 +63,8 @@
 
         --userstyle: 'Dark-WhatsApp [Alpha]';
         --bg-image  : image_url;
+        --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
+            'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
     }
 
     // * Use stylus-lang variables with CSS variables.
@@ -112,8 +114,7 @@
         scrollbar-color: ac #5552;
 
         /// Feat -> Custom font.
-        font-family: ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,\
-            'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
+        &, button, input { font-family: var(--ui-font) }
 
         /// App -> Landing page.
         .landing {
