left: fix parts in search messages/contacts

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -523,6 +523,11 @@
                 .P6z4j { c: white 0 ac }
             }
         }
+        /// Search contacts/messages.
+        .r7sRK {
+            c: ac 0 t;
+            box-shadow: 0 1px bd;
+        }
     }
 
     // App -> Left -> Profile/Settings.
@@ -587,6 +592,14 @@
                     [style *= 'height: 49px'] { c: 0 0 bd }
                 }
             }
+            /// New chat.
+            ._1c8mz {
+                /// New chat.
+                ._11p3Q, ._8-yzK { c: 0 0 t }
+                .r7sRK { c: ac 0 t }
+                /// Remove borders.
+                ._2DxRd, ._2WP9Q { border: none }
+            }
             /// Starred/Archived.
             ._1WMT2 {
                 &::before {
@@ -598,7 +611,6 @@
                 &._1lakC, &._2nA3s { c: 0 0 hl }
                 ._2V2qB, .jLybP::before { c: cm }
             }
-        }
         }
     }
 
