chat: fix document embed background
Closes #45.

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -901,7 +901,7 @@
       background-color: var(--darker) !important; }
 
     /* Document embeds. */
-    ._3a29n {
+    ._3a29n, [title *= 'Download'] > div {
       background-color: var(--dark) !important; }
 
     /* Embeds description */
