UserCSS: switch updateURL from RawGit to GitHub

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -4,7 +4,7 @@
 @namespace    github.com/vednoc/onyx
 @homepageURL  https://github.com/vednoc/onyx
 @supportURL   https://github.com/vednoc/onyx/issues
-@updateURL    https://rawgit.com/vednoc/onyx/master/WhatsApp.user.css
+@updateURL    https://raw.githubusercontent.com/vednoc/onyx/master/WhatsApp.user.css
 @version      1.4.9
 @author       vednoc
 @license      MIT
