chat: fix message context menus

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -729,6 +729,10 @@
                 border-top-color: left;
                 border-right-color: left;
             }
+            /// Context menu.
+            > span:last-child > div[style] {
+                background: linear-gradient(90deg, t, left) i;
+            }
         }
         /// Right.
         &-out {
@@ -742,6 +746,10 @@
                 rad: 0 4px 0 0;
                 border-top-color: right;
                 border-left-color: right;
+            }
+            /// Context menu.
+            > span:last-child > div[style] {
+                background: linear-gradient(90deg, t, right) i;
             }
         }
     }
