right: add initial styles for 'contact info' area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -616,6 +616,25 @@
         }
     }
 
+    // App -> Right.
+    ._1C9rS .copyable-area {
+        border-left: 1px solid bd;
+        /// Avatar.
+        [style *= 'height: 200px'] { c: 0 0 bd }
+        ._1drsQ { c: fg }
+        ._2IwIk { c: cm }
+        /// Buttons.
+        ._3_-Si {
+            padding: 0 15px;
+            > div { c: 0 bd }
+            span { c: fg }
+        }
+        /// Reset padding.
+        ._1ur1f { padding: 28px 15px 19px }
+        ._2ZVEo { padding: 14px 15px 10px }
+        ._2k1Z5 { padding: 14px 15px 4px }
+    }
+
     // Main -> Chat.
     #main {
         c: 0 0 bg;
