--- a/wa.user.styl
+++ b/wa.user.styl
@@ -19,6 +19,7 @@
     'None     ': 'none    ',
 }
 @var text     image_url  'Custom background link' url('https://images.unsplash.com/photo-1434569117012-ce134ee1a088?fit=crop&w=1280&h=720&q=80')
+@var range    bg_opacity 'Custom image opacity  ' [0.5, 0.0, 1, 0.01]
 
 @var color dark    'Color: Primary bg   ' #272c35
 @var color darken  'Color: Highlight bg ' #222730
@@ -63,6 +64,7 @@
 
         --userstyle: 'Dark-WhatsApp [Alpha]';
         --bg-image  : image_url;
+        --bg-opacity: bg_opacity;
         --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
     }
@@ -201,10 +203,10 @@
 
     #app > div {
         &::after {
-            /// TODO: Implement URL/opacity/filter options.
+            /// TODO: Implement filter option.
             if ( app_image == custom ) {
                 s = -4px;
-                opacity: 0.50;
+                opacity: var(--bg-opacity);
                 top: s; right: s; bottom: s; left: s;
                 height: unset; width: unset;
                 filter: blur((-1 * s)) invert(0);
