--- a/wa.user.styl
+++ b/wa.user.styl
@@ -20,6 +20,7 @@
 }
 @var text     image_url  'Custom background link' url('https://images.unsplash.com/photo-1434569117012-ce134ee1a088?fit=crop&w=1280&h=720&q=80')
 @var range    bg_opacity 'Custom image opacity  ' [0.5, 0.0, 1, 0.01]
+@var range    bg_blur    'Custom image opacity  ' [8, 0, 50, 1, 'px']
 
 @var color dark    'Color: Primary bg   ' #272c35
 @var color darken  'Color: Highlight bg ' #222730
@@ -65,6 +66,8 @@
         --userstyle: 'Dark-WhatsApp [Alpha]';
         --bg-image  : image_url;
         --bg-opacity: bg_opacity;
+        --bg-blur   : bg_blur;
+
         --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
     }
@@ -205,11 +208,11 @@
         &::after {
             /// TODO: Implement filter option.
             if ( app_image == custom ) {
-                s = -4px;
+                s = calc(-1 * var(--bg-blur));
                 opacity: var(--bg-opacity);
                 top: s; right: s; bottom: s; left: s;
                 height: unset; width: unset;
-                filter: blur((-1 * s)) invert(0);
+                filter: blur(var(--bg-blur)) invert(0);
                 background-image: var(--bg-image);
                 c: 0 0 hl;
             } else if ( app_image == default ) {
