chat: add styles for alert in unknown contacts

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -855,5 +855,16 @@
             border-top: 1px solid bd;
             c: 0 0 bg;
         }
+        /// Alerts -> Not in your contacts.
+        ._2Pown {
+            c: fg bd hl;
+            [role = 'button'] {
+                c: cm 0 bd;
+                &:hover {
+                    c: fg;
+                    box-shadow: 0 4px 8px sh;
+                }
+            }
+        }
     }
 }
