--- a/wa.user.styl
+++ b/wa.user.styl
@@ -698,8 +698,9 @@
             opacity: 0.95;
             letter-spacing: 0;
             text-shadow: none;
-            c: white 0 ac;
-            box-shadow: inset 0 -3px sh;
+            c: white 0 blue;
+            box-shadow: inset 0 0 0 1rem #00000000, inset 0 -3px sh;
+            &.S-bQb { c: 0 0 orange }
         }
         /// Chat -> Jump to new messages.
         ._3KRbU {
