--- a/wa.user.styl
+++ b/wa.user.styl
@@ -699,7 +699,7 @@
             letter-spacing: 0;
             text-shadow: none;
             c: white 0 blue;
-            box-shadow: inset 0 0 0 1rem #00000000, inset 0 -3px sh;
+            box-shadow: inset 0 -3px sh;
             &.S-bQb { c: 0 0 orange }
         }
         /// Chat -> Jump to new messages.
