Fix outdated "Show more" button Really small fix but hey

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -850,8 +850,8 @@
     ._15aTv {
       color: var(--lighter) !important; }
 
-    /* Read more. */
-    ._2VdJh { color: var(--accent) !important }
+    /* Show more. */
+    ._1Jc9f { color: var(--accent) !important }
 
     /* Deleted message. */
     ._3uHCS { color: var(--lighter) !important }
